<resources>
    <string name="app_name">Le Transcodeur</string>
    <string name="textFieldUn">Entrez votre texte ici</string>
    <string name="btn_valider">Valider</string>
    <string name="txtField_test">Juste un test</string>
    <string name="chck_OK">OK</string>
    <string name="deuxieme_page">Deuxième page</string>
    <string name="premier_plain_texte">Entrez votre message ici</string>
    <string name="chp_noncode">Entrez ici le message à encoder</string>
    <string name="chp_code">Entrez ici le message à DEcoder</string>
    <string name="clef">clef : si vide, appuyez sur "générer"</string>
    <string name="btnGen">Générer</string>
    <string name="chk_bx">Veuillez cocher la checkbox</string>
    <string name="aide_inutile">Répondez ici par oui</string>
    <string name="descr_logo">logo application</string>
    <string name="nom_clef">nom de la clef</string>
    <string name="clef_content">Clef</string>
    <string name="clef_add">Ajouter</string>
    <string name="clef_annul">Annuler</string>
    <string name="btn_sv">Sauver</string>
    <string name="cleflbd">clef</string>
    <string name="btn_sv_clef">sauver la clef</string>
    <string name="entr_nm_clef">entrez le nom de la clef</string>
</resources>